--- a/glauth/docker-compose.yml
+++ b/glauth/docker-compose.yml
@@ -1,10 +1,12 @@
 version: '3'
 
-
-# in progress - file not yet complete
+# Still in progress
 
 services:
+
   ldap:
     image: glauth/glauth:latest
     ports:
-     - "389:389"
+     - 389:389
+    volumes:
+     - ./data/config.cfg:/app/config/config.cfg
