--- a/glauth/docker-compose.yml
+++ b/glauth/docker-compose.yml
@@ -8,5 +8,6 @@ services:
     image: glauth/glauth:latest
     ports:
      - 389:389
+     - 636:636
     volumes:
-     - ./data/config.cfg:/app/config/config.cfg
+     - ./config.cfg:/app/config/config.cfg
