Add gitea - add glauth

--- a/glauth/docker-compose.yml
+++ b/glauth/docker-compose.yml
@@ -1,20 +1,17 @@
 version: '3'
 
-# Still in progress
+# GLauth - a lightweight ldap server
 
 services:
 
-  ldap:
-
+  glauth:
     # Use me for released version
     image: glauth/glauth:latest
-
     # Use me for dev branch / unstable version
     # image: glauth/glauth:develop
-
+    restart: always
     ports:
-     - 389:389
-     - 636:636
-
+      - 389:389
+      - 636:636
     volumes:
-     - ./data/:/app/config/
+      - ./data/:/app/config/
