Add docs for webcron

--- a/webcron/docker-compose.yml
+++ b/webcron/docker-compose.yml
@@ -8,4 +8,4 @@ services:
     image: tigpt/cronjobs:latest
     restart: unless-stopped
     volumes:
-      - ./data/config:/etc/crontabs/root
+      - ./data/config:/etc/crontabs
