--- a/rundeck/docker-compose.yml
+++ b/rundeck/docker-compose.yml
@@ -5,7 +5,7 @@ web:
   environment:
     RUNDECK_DATABASE_ENGINE: mysql
     RUNDECK_INITIAL_ADMIN_PASSWORD: apslrocks
-    RUNDECK_SERVER_URL: http://rundeck.yourdomain.com
+    RUNDECK_SERVER_URL: http://localhost:8089
     RUNDECK_MYSQL_HOST: mysql
     RUNDECK_MYSQL_DATABASE: rundeckdb
     RUNDECK_MYSQL_USER: urundeck
@@ -14,15 +14,15 @@ web:
     RUNDECK_MAIL_USERNAME: username
     RUNDECK_MAIL_PORT: 587
     RUNDECK_MAIL_PASSWORD: password
-    RUNDECK_MAIL_STARTTLS: true
-    RUNDECK_MAIL_SMTP_AUTH: true
+    RUNDECK_MAIL_STARTTLS: "true"
+    RUNDECK_MAIL_SMTP_AUTH: "true"
     RUNDECK_MAIL_DEFAULT_FROM: noreply@yourdomain.com
   volumes:
     - ./volumes/data:/data
   links:
     - "mysql:mysql"
   ports:
-    - "0.0.0.0:80:4440"
+    - "0.0.0.0:8089:4440"
 mysql:
   image: mysql:5.7.11
   environment:
